fix #13: notice layout broken on mobile

--- a/styles/stuffitempage.module.css
+++ b/styles/stuffitempage.module.css
@@ -129,11 +129,6 @@
     font-size: 1.5rem;
   }
 
-  .floatingContainer > p {
-    font-size: 1rem;
-    max-width: 75%;
-  }
-
   .floatingContainer {
     text-align: left;
   }
